   XMLCallableStatementWriter added in org.openadaptor.auxil.connector.jdbc.writer.xml
   package.
   
 * LoopingPollingReadConnector and CronnableReadConnector - new 'reconnect' property.
   Setting it to false causes the underlying IReadConnector not to be physically
   reconnected on every poll (useful when the underlying reader is JDBCReadConnector). 
   
 * WebServiceListeningReadConnector - changed default namespace in the response.  
   
Processors
==========
 
 * ExceptionToOrderedMapConvertor - correct detection of the message data type.

 * Added Legacy DataObject type filter (& corresponding example)

Examples
========

 * Added example of a Sybase event driven read connector 
   (example\spring\connectors\db\sybase\event.xml). 

 * Modified looping/cronnable connector examples as per comments above.
 
 * Added new example to illustrate how to mark data as processing/processed when
   reading from database (example\spring\connectors\db\reader2.xml)
   
 * Added example to illustrate how legacy 'Inspectors' may be approximated using scripts
   (example\spring\processors\script\script-inspector.xml)
   
 * Added examples for new ISQLWriter implementations in example\spring\connectors\db  
   (xml-table-writer.xml and xml-storedproc-writer.xml)

Miscellaneous
=============

 * Adaptor class has two static utility methods for programmatic invocation of adaptors.
   Simple.java (in example/src/...) demonstrates usage.
   
 * Migration guidelines (draft): www/migration.html  

Bug Fixes
=========

SC48: Transaction rollback when handling exceptions from IWriteConnectors.

SC53: ScriptProcessor fails when used with java 1.6. Symptoms are AbstractMethodErrors being thrown.

3rd Party
=========

 * Upgraded: lib/XmlSchema_1.1.jar 1.4.2.
             lib/commons-httpclient_3.0.1.jar to 3.1.
             lib/commons-lang_2.0.jar to 2.4.
             lib/xfire-all_1.2.3.jar to 1.2.6.
             lib/jetty-6.0.1.jar to 6.1.9 (related change in ServletContainer).