@@ -37,7 +37,8 @@ Connectors
    Setting it to false causes the underlying IReadConnector not to be physically
    reconnected on every poll (useful when the underlying reader is JDBCReadConnector). 
    
- * WebServiceListeningReadConnector - changed default namespace in the response.  
+ * WebServiceListeningReadConnector - changed default namespace in the response.
+   Exposed queueSize and queueLimit via JMX.  
    
 Processors
 ==========
@@ -89,7 +90,7 @@ SC53: ScriptProcessor fails when used with java 1.6. Symptoms are AbstractMethod
              lib/jetty-util-6.0.1.jar to 6.1.9 (related change in ServletContainer).
              lib/js_1_6R5.jar replaced by js.jar, version 1.6R7 (related changes in build.xml)
  
- * Added (required for CXF):    
+ * Added (in preparation for support of CXF web service framework):    
              lib/jaxws-api_2.1-1.jar.
              lib/neethi_2.0.4.jar.
              lib/FastInfoset_1.2.2.jar.
